# localfusion

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  release.sh  startdebug.sh
docs/superpowers/plans/: 2026-06-27-model-connectivity-test.md  2026-06-27-web-i18n.md
docs/superpowers/plans/2026-06-26-localfusion/: 00-index.md  P1-T01-scaffold.md  P1-T02-error.md  P1-T03-crypto.md  P1-T04-unified.md  P1-T05-db-pool.md  P1-T06-db-settings.md  P1-T07-db-models.md  P1-T08-db-virtual-models.md  P1-T09-db-keys.md  P1-T10-db-prices.md  P1-T11-db-latency.md  P1-T12-db-usage.md  P2-T01-connector-core.md  P2-T02-sse-engine.md  P2-T03-chat-connector.md  (+26 more)
docs/superpowers/specs/: 2026-06-26-localfusion-design.md  2026-06-26-model-price-defaults-design.md  2026-06-27-model-connectivity-test-design.md  2026-06-27-web-i18n-design.md
scripts/: update-litellm-snapshot.sh
src/: auth.rs  bootstrap.rs  crypto.rs  error.rs  lib.rs  logging.rs  main.rs  pipeline.rs  price_refresh.rs  prices_litellm.rs  probe.rs  router.rs  unified.rs
src/admin/: api.rs  mod.rs  static_assets.rs
src/connector/: anthropic.rs  chat.rs  mod.rs  responses.rs  sse.rs
src/db/: keys.rs  latency.rs  mod.rs  models.rs  prices.rs  schema.rs  settings.rs  usage.rs  virtual_models.rs
src/ingress/: anthropic.rs  handler.rs  mod.rs  openai_chat.rs  openai_responses.rs  sse_out.rs
src/strategy/: best_of_n.rs  cheapest.rs  failover.rs  mod.rs  multimodal.rs  speed.rs  synthesize.rs  testutil.rs
tests/: admin_api.rs  chat_connector.rs  e2e.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/scripts/: check-i18n-keys.mjs
web/src/: main.tsx  routeTree.gen.ts
web/src/i18n/: index.ts
web/src/lib/: api.ts
web/src/routes/: __root.tsx
web/src/stores/: auth-store.ts
web/src/styles/: index.css
(+68 files in other folders)
