[package]
name = "localfusion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "localfusion"
path = "src/main.rs"

[lib]
name = "localfusion"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
machine-uid = "0.5"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
tempfile = "3"
