[package]
name = "localfusion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "localfusion"
path = "src/main.rs"

[lib]
name = "localfusion"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
machine-uid = "0.5"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
tempfile = "3"
wiremock = "0.6"
